feat: Saving work, not working order. Demo version 06.

--- a/src/main/webapp/X0003Attendance/index.html
+++ b/src/main/webapp/X0003Attendance/index.html
@@ -12,11 +12,11 @@
 			data-sap-ui-async="true"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-frameOptions="trusted"
+			data-sap-ui-logLevel = "all"
 			data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-resourceroots='{"sap.ui.demo.nav": "./"}'
-			data-sap-ui-theme="sap_belize_plus"
+			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-xx-componentPreload="off"
-			data-sap-ui-logLevel = "all"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js">
 	</script>
 </head>
