feat: Saving work,working order. Demo version 07.

--- a/src/main/webapp/Walkthrough26/index.html
+++ b/src/main/webapp/Walkthrough26/index.html
@@ -20,12 +20,11 @@
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js">
     </script>
 </head>
-<body class="sapUiBody" id="content">
-<div
+<body class="sapUiBody">
+<div data-sap-ui-component
      data-id="container00"
      data-name="sap.ui.demo.walkthrough"
-     data-sap-ui-component
-     data-settings='{"id" : "walkthrough"}'>
+     data-settings='{"id" : "koolootoomba"}'>
 </div>
 </body>
 </html>
