--- a/src/main/webapp/Walkthrough37/index.html
+++ b/src/main/webapp/Walkthrough37/index.html
@@ -5,7 +5,7 @@
     <meta content="FvdB" name="author">
     <meta content="" name="description">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAPUI5 Walkthrough 26</title>
+    <title>SAPUI5 Walkthrough 37</title>
 
     <!--Standard Variant for Bootstrapping - Option 1 (Recommended)-->
     <script id="sap-ui-bootstrap"
@@ -17,6 +17,7 @@
             data-sap-ui-resourceroots='{"sap.ui.demo.walkthrough": "./"}'
             data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-xx-componentPreload="off"
+            data-sap-ui-xx-waitForTheme= "true"
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js">
     </script>
 </head>
