--- a/src/main/webapp/public/index0.html
+++ b/src/main/webapp/public/index0.html
@@ -45,7 +45,7 @@
 			data-sap-ui-oninit="main();"
 			data-sap-ui-preload="async"
 			data-sap-ui-resourceroots='{"nl.buildforce.gt": "./"}'
-			data-sap-ui-theme="sap_belize_plus">
+			data-sap-ui-theme="sap_fiori_3">
 	</script>
 	<script>
 	      sap.ui.getCore().attachInit(function() {
