--- a/src/main/webapp/public/signage00.html
+++ b/src/main/webapp/public/signage00.html
@@ -21,7 +21,7 @@
             data-sap-ui-loglevelx="3"
             data-sap-ui-resourceroots='{ "ui" : "./ui", "misc" : "./view/misc", "nl.buildforce.gt": "./" }'
             data-sap-ui-rootcomponent="ui"
-            data-sap-ui-theme="sap_bluecrystal">
+            data-sap-ui-theme="sap_fiori_3">
     </script>
   </head>
 
