--- a/src/main/webapp/A0000Users/index.html
+++ b/src/main/webapp/A0000Users/index.html
@@ -7,7 +7,7 @@
     <meta content="initial-scale=1" name="viewport">
     <title>GreenTrak • User Profile</title>
 
-    <script>window["sap-ui-config"] = {productive: true};</script>
+    <!--<script>window["sap-ui-config"] = {productive: true};</script>-->
 
     <!--Standard Variant for Bootstrapping - Option 1 (Recommended)-->
     <script id="sap-ui-bootstrap"
@@ -16,7 +16,7 @@
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-resourceRoots='{"sap.ui.demo.basicTemplate": "./"}'
-            data-sap-ui-theme="sap_belize_plus"
+            data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-xx-componentPreload="off"
             data-sap-ui-xx-waitForTheme="true"
             src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js">
