--- a/src/main/webapp/P0000Projects/index.html
+++ b/src/main/webapp/P0000Projects/index.html
@@ -16,7 +16,7 @@
             data-sap-ui-frameOptions="trusted"
             data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
             data-sap-ui-resourceRoots='{"sap.ui.demo.basicTemplate": "./"}'
-            data-sap-ui-theme="sap_belize_plus"
+            data-sap-ui-theme="sap_fiori_3"
             data-sap-ui-xx-componentPreload="off"
             data-sap-ui-xx-waitForTheme="true"
             src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js">
