--- a/src/main/webapp/X0001PersInfo/index.html
+++ b/src/main/webapp/X0001PersInfo/index.html
@@ -14,7 +14,7 @@
 			data-sap-ui-frameOptions="trusted"
 			data-sap-ui-onInit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-resourceroots='{"sap.ui.demo.nav": "./"}'
-			data-sap-ui-theme="sap_belize_plus"
+			data-sap-ui-theme="sap_fiori_3"
 			data-sap-ui-xx-componentPreload="off"
 			data-sap-ui-logLevel = "all"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js">
