--- a/src/main/webapp/TodoMVC implementation for SapUI5/index.html
+++ b/src/main/webapp/TodoMVC implementation for SapUI5/index.html
@@ -9,7 +9,7 @@
 		</script>
 		<link href="css/base.css" rel="stylesheet">
 	</head>
-	<body role="application">
+	<body class="sapUiBody" role="application">
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
@@ -18,8 +18,6 @@
 		</section>
 		<footer id="info">
 			<p>Double-click to edit a todo</p>
-			<p>Written by Harald Schubert</p>
-			<p>Part of <a href="http://todomvc.com/">TodoMVC</a></p>
 		</footer>
 		<script src="todomvc-common/base.js"></script>
 		<script src="js/app.js"></script>
