feat: Saving work, working order. Demo version 19.

--- a/src/main/webapp/ReadySteadyGo/index.html
+++ b/src/main/webapp/ReadySteadyGo/index.html
@@ -9,7 +9,7 @@
             data-sap-ui-libs="sap.m, sap.ui.layout, sap.tnt"
             data-sap-ui-onInit="module:Quickstart/index"
             data-sap-ui-resourceroots='{"Quickstart": "./"}'
-            data-sap-ui-theme="sap_belize"
+            data-sap-ui-theme="sap_fiori_3"
             src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js">
     </script>
 </head>
