feat: Plunker versions added. Working order, no update function. Demo version 39.

--- a/src/main/webapp/Berg/index.html
+++ b/src/main/webapp/Berg/index.html
@@ -2,20 +2,19 @@
 <html style="height: 100%;" lang="">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1" name="viewport">
   <title>Demo</title>
-    <script
-      id="sap-ui-bootstrap"
-      src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+    <script id="sap-ui-bootstrap"
+            data-sap-ui-async="true"
+            data-sap-ui-compatVersion="edge"
       data-sap-ui-theme="sap_fiori_3"
       data-sap-ui-modules="sap/ui/core/ComponentSupport"
-      data-sap-ui-async="true"
-      data-sap-ui-compatversion="edge"
-      data-sap-ui-resourceroots='{ "demo": "./" }'
+      data-sap-ui-resourceRoots='{ "demo": "./" }'
       data-sap-ui-loglevel="INFO"
       data-sap-ui-xx-componentpreload="off"
       data-sap-ui-xx-waitfortheme="init"
-    ></script>
+      src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js">
+    </script>
 </head>
   <body id="content" class="sapUiBody">
     <div
