feat: User UI. Working order, no update function. Demo version 40.

--- a/src/main/webapp/public/index.html
+++ b/src/main/webapp/public/index.html
@@ -368,7 +368,8 @@
                     </div>
 
                     <div class="front-signin js-front-signin">
-                        <form action="/auth" class="t1-form signin" method="get">
+                        <!--class="t1-form signin"-->
+                        <form action="/ContextPath/public/index0.html" method="get">
                             <div class="username field">
                                 <input
                                         type="text"
